# brainglobe-heatmap

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: examples.yml  test_and_deploy.yml  update-baselines.yml
bgheatmaps/: __init__.py  heatmaps.py  planes.py  planner.py  slicer.py  utils.py
brainglobe_heatmap/: __init__.py  heatmaps.py  plane.py  planner.py  slicer.py
brheatmaps/: __init__.py  heatmaps.py  planes.py
examples/: cellfinder_cell_density.py  frontal.py  get_coordiantes.py  get_coordinates.py  heatmap_2d.py  heatmap_2d_spinal_coord.py  heatmap_2d_subplots.py  heatmap_2d_subplots_oblique.py  heatmap_3d.py  heatmap_3d_alpha.py  heatmap_animated.py  heatmap_human_brain.py  heatmap_spinal_coord.py  heatmap_spinal_cord.py  heatmap_zebrafish.py  plan.py  region_annotation.py  region_annotation_custom.py  region_annotation_specified.py  sagittal.py  slicer_2D.py  summary.csv  top.py
tests/: conftest.py
tests/test_integration/: test_example_region_annotation.py  test_examples.py  test_get_coordinates.py  test_heatmaps_integration.py  test_hemisphere_specific_values.py  test_slicer_2d_example.py
tests/test_unit/: test_alpha.py  test_check_values.py  test_coverage.py  test_find_annotation_position_inside_polygon.py  test_get_ax_idx.py  test_get_region_annotation_text.py  test_heatmap_2d_colorbar.py  test_heatmap_should_annotate_regions.py  test_heatmaps_unit.py  test_join_reset.py  test_parse_values.py  test_plane.py  test_planner.py  test_slicer.py
