[project]
name = "brainglobe-heatmap"
authors = [{ name = "Federico Claudi", email = "hello@brainglobe.info" }]
description = "Rendering anatomical heatmaps with brainrender and matplotlib"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = ["brainrender>=2.1.17", "matplotlib", "numpy", "myterial", "rich", "shapely"]

license = { text = "MIT" }

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/brainglobe/brainglobe-heatmap"
"Bug Tracker" = "https://github.com/brainglobe/brainglobe-heatmap/issues"
"Documentation" = "https://github.com/brainglobe/brainglobe-heatmap"
"Source Code" = "https://github.com/brainglobe/brainglobe-heatmap"
"User Support" = "https://github.com/brainglobe/brainglobe-heatmap/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "tox",
    "black",
    "mypy",
    "pre-commit",
    "ruff",
    "setuptools_scm",
]


[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe_heatmap*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=brainglobe_heatmap"

[tool.black]
target-version = ['py311','py312', 'py313']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
    ".yaml",
    "tox.ini",
    "tests/",
    "tests/test_unit/",
    "tests/test_integration/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
fix = true

[tool.ruff.lint]
select = ["I", "E", "F", "B"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_heatmap --cov-report=xml
"""
